finished window source switched config stuff to macros

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,11 +21,11 @@ if ("${CMAKE_SYSTEM_NAME}" MATCHES "Linux")
     find_path(MPD_INCLUDE_DIRS mpd.h)
     set(tuna_platform_deps
             mpdclient)
-    set(tuna_plaform_sources "")
+    set(tuna_plaform_sources "./src/util/window/window_helper_nix.cpp")
 endif ()
 
 if (MSVC)
-   set(tuna_platform_sources "")
+   set(tuna_platform_sources "./src/util/window/window_helper.win.cpp")
    set(tuna_platform_deps
             w32-pthreads)
 endif ()
@@ -48,12 +48,13 @@ set(tuna_sources
     ./src/util/tuna_thread.cpp
     ./src/util/tuna_thread.hpp
     ./src/util/utility.cpp
-    ./src/util/utility.hpp)
+    ./src/util/utility.hpp
+    ./src/util/window/window_helper.hpp)
 
 add_library(tuna MODULE
     ${tuna_sources}
     ${tuna_ui}
-    ${tuna_platform_sources})
+    ${tuna_plaform_sources})
 
 include_directories(
         SYSTEM "${CMAKE_SOURCE_DIR}/libobs"
