Added error message locale fixed CMake message VLC error message only appears once every obs update and saves decision

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,10 +49,10 @@ if (NOT LIBVLC_INCLUDES_FOUND AND ENABLE_VLC)
     add_definitions(-DDISABLE_TUNA_VLC=1)
 elseif (NOT LIBVLC_INCLUDES_FOUND)
     message(STATUS "[tuna] LibVLC includes not found, VLC source support disabled")
+    message(STATUS "[tuna] If you want VLC support, clone the VLC repo and point VLC_INCLUDE_DIR to <repo>/include/vlc ")
     add_definitions(-DDISABLE_TUNA_VLC=1)
 else()
     message(STATUS "[tuna] LibVLC headers found, VLC source support enabled")
-    message(STATUS "[tuna] If you want VLC support, clone the VLC repo and point LIBVLC_INCLUDE_DIRS to it")
 endif()
 
 if (DISABLE_VLC)
