--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -343,7 +343,7 @@ jobs:
         env: 
           token: ${{ secrets.SPOTIFY_TOKEN }}
         run: |
-          "$token" | Out-File -NoNewline -FilePath ${{ github.workspace }}/${{ env.project-git }}/creds.txt
+          "$env:token" | Out-File -NoNewline -FilePath ${{ github.workspace }}/${{ env.project-git }}/creds.txt
       - name: 'Configure ${{ env.project-git }}  64-bit'
         working-directory: ${{ github.workspace }}\${{ env.project-git }}
         run: |
