--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -339,9 +339,11 @@ jobs:
           msbuild /m /p:Configuration=RelWithDebInfo .\build64\libobs\libobs.vcxproj
           msbuild /m /p:Configuration=RelWithDebInfo .\build64\UI\obs-frontend-api\obs-frontend-api.vcxproj
       - name: 'Create creds.txt'
-        shell: powershell
+        shell: bash
+        env:
+          token: ${{ secrets.SPOTIFY_TOKEN }}
         run: |
-          "${{ secrets.SPOTIFY_TOKEN }}" | Out-File -NoNewline -FilePath ${{ github.workspace }}/${{ env.project-git }}/creds.txt
+          echo "$token" > ${{github.workspace}}/${{ env.project-git }}/creds.txt
       - name: 'Configure ${{ env.project-git }}  64-bit'
         working-directory: ${{ github.workspace }}\${{ env.project-git }}
         run: |
